--- a/package.json
+++ b/package.json
@@ -1,18 +1,31 @@
 {
   "name": "vitasense",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "Main.tsx",
   "scripts": {
+    "ts:check": "tsc",
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@types/react": "~18.2.45",
+    "eas-cli": "^7.1.3",
     "expo": "~50.0.5",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.2"
+    "react-native": "0.73.2",
+    "react-native-gifted-charts": "^1.4.7",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-pager-view": "^6.2.3",
+    "react-native-paper": "^5.12.3",
+    "react-native-paper-tabs": "^0.10.3",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-svg": "^14.1.0",
+    "react-native-vector-icons": "^10.0.3",
+    "typescript": "^5.3.0",
+    "expo-updates": "~0.24.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
