--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@types/react": "~18.2.45",
+    "date-fns": "^3.3.1",
     "eas-cli": "^7.1.3",
     "expo": "~50.0.5",
     "expo-status-bar": "~1.11.1",
+    "expo-updates": "~0.24.10",
     "react": "18.2.0",
     "react-native": "0.73.2",
     "react-native-gifted-charts": "^1.4.7",
@@ -24,8 +26,7 @@
     "react-native-safe-area-context": "^4.9.0",
     "react-native-svg": "^14.1.0",
     "react-native-vector-icons": "^10.0.3",
-    "typescript": "^5.3.0",
-    "expo-updates": "~0.24.10"
+    "typescript": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
