--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@shopify/react-native-skia": "^0.1.221",
     "@types/react": "~18.2.45",
     "date-fns": "^3.3.1",
     "eas-cli": "^7.1.3",
@@ -18,11 +19,13 @@
     "expo-updates": "~0.24.10",
     "react": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-gesture-handler": "^2.14.0",
     "react-native-gifted-charts": "^1.4.7",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-pager-view": "^6.2.3",
     "react-native-paper": "^5.12.3",
     "react-native-paper-tabs": "^0.10.3",
+    "react-native-reanimated": "^3.6.2",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-svg": "^14.1.0",
     "react-native-vector-icons": "^10.0.3",
