--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-native-safe-area-context": "^4.9.0",
     "react-native-svg": "^14.1.0",
     "react-native-vector-icons": "^10.0.3",
-    "typescript": "^5.3.0"
+    "typescript": "^5.3.0",
+    "expo-file-system": "~16.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
