--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "typescript": "^5.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/d3": "^7.4.3"
   },
   "private": true
 }
