--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "ts:check": "tsc",
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -16,11 +16,13 @@
     "date-fns": "^3.3.1",
     "eas-cli": "^7.1.3",
     "expo": "~50.0.5",
+    "expo-device": "^5.9.3",
     "expo-file-system": "~16.0.6",
     "expo-status-bar": "~1.11.1",
     "expo-updates": "~0.24.10",
     "react": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-ble-plx": "^3.1.2",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-gifted-charts": "^1.4.7",
     "react-native-linear-gradient": "^2.8.3",
@@ -32,7 +34,8 @@
     "react-native-safe-area-context": "^4.9.0",
     "react-native-svg": "^14.1.0",
     "react-native-vector-icons": "^10.0.3",
-    "typescript": "^5.3.0"
+    "typescript": "^5.3.0",
+    "expo-dev-client": "~3.3.9"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
