--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "date-fns": "^3.3.1",
     "eas-cli": "^7.1.3",
     "expo": "~50.0.5",
+    "expo-dev-client": "~3.3.9",
     "expo-device": "^5.9.3",
     "expo-file-system": "~16.0.6",
     "expo-status-bar": "~1.11.1",
@@ -34,12 +35,12 @@
     "react-native-safe-area-context": "^4.9.0",
     "react-native-svg": "^14.1.0",
     "react-native-vector-icons": "^10.0.3",
-    "typescript": "^5.3.0",
-    "expo-dev-client": "~3.3.9"
+    "typescript": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/d3": "^7.4.3"
+    "@types/d3": "^7.4.3",
+    "@types/lodash": "^4.17.0"
   },
   "private": true
 }
