--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/slider": "^4.5.0",
     "@shopify/react-native-skia": "0.1.221",
     "@types/react": "~18.2.45",
     "d3": "^7.8.5",
@@ -24,13 +25,13 @@
     "react": "18.2.0",
     "react-native": "0.73.5",
     "react-native-ble-plx": "^3.1.2",
-    "react-native-gesture-handler": "~2.14.0",
+    "react-native-gesture-handler": "2.14.0",
     "react-native-gifted-charts": "^1.4.7",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-pager-view": "^6.2.3",
     "react-native-paper": "^5.12.3",
     "react-native-paper-tabs": "^0.10.3",
-    "react-native-reanimated": "~3.6.2",
+    "react-native-reanimated": "3.6.2",
     "react-native-redash": "^18.1.3",
     "react-native-safe-area-context": "4.8.2",
     "react-native-svg": "^14.1.0",
